2007-02-02  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/OutputOptionsPanel.cs:
	  Set the project directory as default path for the file entries.
	  Fixes bug #80386 and #79223.

2007-02-01  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/ICompletionData.cs,
	  MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs,
	  MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Added new
	  interface IActionCompletionData, which can be used to implement
	  custom completion actions.
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Made this
	  class public. Factorized some methods to make them more usable.

2007-01-29  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Completion/CompletionListWindow.cs: Track
	  changes in the API. Now the cursor positions are taken from a
	  CodeCompletionContext object.
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionData.cs: Lazily get
	  documentation from classes, to avoid loading too much data into
	  memory.
	* MonoDevelop.Projects.Gui.Completion/CommentCompletionDataProvider.cs:
	  Removed since it's not being used right now.
	* MonoDevelop.Projects.Gui.Completion/ListWindow.cs: Allow specifying a
	  completion text which is different from the text shown in the list.
	  Added method for selecting an entry in the list.
	* MonoDevelop.Projects.Gui.Completion/ICompletionWidget.cs: Created
	  class CodeCompletionContext, which holds the coordinates of a code
	  completion operation.
	* MonoDevelop.Projects.Gui.Completion/ICompletionDataProvider.cs: A
	  completion provider can now specify the entry that has to be
	  selected by default in the completion list.
	* MonoDevelop.Projects.Gui.Completion/CodeCompletionDataProvider.cs:
	  Moved al C# specific code to the C# add-in. Now this class is just
	  a collection of CodeCompletionData. Every language add-in should